2004-05-25  William Jon McCann  <mccann@jhu.edu>

	* evolution-message-composer.xml: 
	* evolution-composer-entries.xml: 
	* evolution-contact-list-editor.xml: 
	* evolution-contact-editor.xml: 
	* evolution.xml: 
	* evolution-mail-message.xml: 
	* evolution-mail-list.xml: 
	* evolution-mail-global.xml: 
	* evolution-addressbook.xml: use stock icons where possible.
	Calendar and tasks already use stock icons.

	* evolution-tasks.xml: swap positions of delete and print icons
	to be consistent with the other components.

2004-05-19  Not Zed  <NotZed@Ximian.com>

	* evolution.xml: Added View->Window menu.

2004-05-18  Jerome Lacoste  <jerome@coffeebreaks.org>

	Fixes bug #57940

	* evolution-addressbook.xml: "Save as VCard" -> "Save as VCard..."

2004-05-14  Jeffrey Stedfast  <fejj@novell.com>

	* evolution-mail-message.xml: Rename MessageResend to MessageEdit
	since that's actually what it does.

2004-05-06  Rodney Dawes  <dobey@ximian.com>

	* evolution-mail-message.xml: Make some more toolbar and menu items
	use the stock versions of icons

	Fixes #57963 partly

2004-04-30  Dave Fallon <davef@tetsubo.com>

       * ui/evolution-addressbook.xml: Fixed Bug #57611.

2004-04-15  JP Rosevear <jpr@ximian.com>

	* evolution-comp-editor.xml: remove "Save" only option

2004-04-09  Dan Winship  <danw@ximian.com>

	* evolution.xml: Update for "New" changes. Move "New Window" into
	File menu.

2004-04-06  Not Zed  <NotZed@Ximian.com>

	* evolution-mail-message.xml: moved goto stuff to the view menu.

2004-03-31  William Jon McCann  <mccann@jhu.edu>

	* evolution-tasks.xml: 
	* evolution-calendar.xml: add missing labels to dock items.

2004-03-30  Chris Toshok  <toshok@ximian.com>

	[ part of fix for bug #53634 ]
	
	* evolution-addressbook.xml: remove the Tools submenu placeholder
	foo.

2004-03-22  Hari Prasad Nadig <hp@ndeepak.info>

	* evolution-calendar.xml: Naming issue resolved ( Bug 48293 )

2004-03-08  Radek Doulik  <rodo@ximian.com>
