@@ -1,3 +1,7 @@
+2004-05-28  JP Rosevear  <jpr@novell.com>
+
+	* evolution.xml: changed to About Evolution; comment out FAQ
+
 2004-05-25  William Jon McCann  <mccann@jhu.edu>
 
 	* evolution-message-composer.xml: 
